--- a/Portfolio-main.sass
+++ b/Portfolio-main.sass
@@ -68,3 +68,234 @@ header
 		font-size: 30px
 		font-family: Elephant
 		color: pink
+#Gallery
+	.bgimage
+		background-image: url('images/personal_galaxy3_jpg.jpg')
+img
+	max-width: 100%
+header
+.clearfix
+	content: ""
+	clear: both
+	display: table
+.logo
+	float: left
+	width: 20%
+	position: relative
+	z-index: 9
+.return-button
+	padding: 20px
+.nav
+	padding: 20px 20px
+	text-align: center
+	position: absolute
+	top: 0
+	left: 0
+	right: 0
+	ul,li,a
+		margin: 0
+		padding: 0
+		list-style: none
+		display: inline-block
+		position: fixed-center
+		font-size: 30px
+		font-family: Elephant
+		color: pink
+#Collections
+	.bgimage
+		background-image: url('images/20171121_084457.png')
+img
+	max-width: 100%
+header
+.clearfix
+	content: ""
+	clear: both
+	display: table
+.logo
+	float: left
+	width: 20%
+	position: relative
+	z-index: 9
+.return-button
+	padding: 20%
+.nav
+	padding: 20px 20px
+	text-align: center
+	position: absolute
+	top: 0
+	left: 0
+	right: 0
+	ul,li,a
+		margin: 0
+		padding: 0
+		list-style: none
+		display: inline-block
+		position: fixed-center
+		font-size: 30px
+		font-family: Elephant
+		color: pink
+#Projects
+	.bgimage
+		background-image: url('images/shownu.jpg')
+img
+	max-width: 100%
+header
+.clearfix
+	content: ""
+	clear: both
+	display: table
+.logo
+	float: left
+	width: 20%
+	position: relative
+	z-index: 9
+.return-button
+	padding: 20px
+.nav
+	padding: 20px
+	text-align: center
+	position: absolute
+	top: 0
+	left: 0
+	right: 0
+	ul,li,a
+		margin: 0
+		padding: 0
+		list-style: none
+		display: inline-block
+		position: fixed-center
+		font-size: 30px
+		font-family: Elephant
+		color: pink
+#Works_in_Progress
+	.bgimage
+		background-image: url('images/20171113_083523.jpg')
+img
+	max-width: 100%
+header
+.clearfix
+	content: ""
+	clear: both
+	display: table
+.logo
+	float: left
+	width: 20%
+	position: relative
+	z-index: 9
+.return-button
+	padding: 0
+.nav
+	padding: 20px
+	text-align: center
+	position: absolute
+	top: 0
+	left: 0 
+	right: 0
+	ul,li,a
+		margin: 0
+		padding: 0
+		list-style: none
+		display: inline-block
+		position: fixed-center
+		font-size: 30px
+		font-family: Elephant
+		color: pink
+#About
+	.bgimage
+		background-image: url('images/20171113_120406.jpg')
+img
+	max-width: 100%
+header
+.clearfix
+	content: ""
+	clear: both
+	display: table
+.logo
+	float: left
+	width: 20%
+	position: relative
+	z-index: 9
+.reutn-button
+	padding: 0
+.nav
+	padding: 20px
+	text-align: center
+	position: absolute
+	top: 0
+	left: 0
+	right: 0
+	ul,li,a
+		margin: 0
+		padding: 0
+		list-style: none
+		display: inline-block
+		position: fixed-center
+		font-size: 30px
+		font-family: Elephant
+		color: pink
+#Contact
+	.bgimage
+		background-image: url('images/20171113_143212.jpg')
+img
+	max-width: 100%
+header
+.clearfix
+	content: ""
+	clear: both
+	display: table
+.logo
+	float: left
+	width: 20%
+	position: relative
+	z-index: 9
+.return-button
+	padding: 0
+.nav
+	padding: 20px
+	text-align: center
+	position: absolute
+	top: 0
+	left: 0
+	right: 0
+	ul,li,a
+		margin: 0
+		padding: 0
+		list-style: none
+		display: inline-block
+		position: fixed-center
+		font-size: 30px
+		font-family: Elephant
+		color: pink
+#Help
+	.bgimage
+		background-image: url('images/20171113_143535.jpg')
+img
+	max-width: 100%
+header
+.clearfix
+	content: ""
+	clear: both
+	display: table
+.logo
+	float: left
+	width: 20%
+	position: relative
+	z-index: 9
+.return-button
+	padding: 0
+.nav
+	padding: 20px
+	text-align: center
+	position: absolute
+	top: 0
+	left: 0
+	right: 0
+	ul,li,a
+		margin: 0
+		padding: 0
+		list-style: none
+		display: inline-block
+		position: fixed-center
+		font-size: 30px
+		font-family: Elephant
+		color: pink
