--- a/Portfolio-main.sass
+++ b/Portfolio-main.sass
@@ -41,6 +41,7 @@ body.hovering
 img
 	max-width: 100%
 header
+	padding: 20px
 .clearfix
 	content: ""
 	clear: both
@@ -50,8 +51,9 @@ header
 	width: 20%
 	position: relative
 	z-index: 9
-.return-button
+.return-buttonh
 	padding: 20px
+	width: 30%
 .nav
 	padding: 20px 20px
 	text-align: center
@@ -68,6 +70,16 @@ header
 		font-size: 30px
 		font-family: Elephant
 		color: pink
+.content
+	padding: 20px
+.center-column
+	float: left
+	width: 40%
+	margin-left: 2%
+	text-align: center center
+	color: pink
+	position: relative 
+	z-index: 99
 #Gallery
 	.bgimage
 		background-image: url('images/personal_galaxy3_jpg.jpg')
@@ -101,11 +113,8 @@ header
 		font-size: 30px
 		font-family: Elephant
 		color: pink
-#Collections
-	.bgimage
-		background-image: url('images/20171121_084457.png')
-img
-	max-width: 100%
+#Materials
+	background-color: #F5ECCE
 header
 .clearfix
 	content: ""
@@ -297,5 +306,6 @@ header
 		display: inline-block
 		position: fixed-center
 		font-size: 30px
+
 		font-family: Elephant
 		color: pink
